@@ -1,5 +1,5 @@
 /*
- * $Id: default_v0_fn.c,v 1.8 2009-03-17 18:38:12 heas Exp $
+ * $Id: aceclnt_fn.c,v 1.00 2012-02-24 18:40:20 maddison Exp $
  *
  * Copyright (c) 1995-1998 by Cisco systems, Inc.
  *
@@ -27,14 +27,45 @@
 #define STATE_AUTHEN_GETUSER 1	/* username has been requested */
 #define STATE_AUTHEN_GETPASS 2	/* password has been requested */
 
+#include <acexport.h>
+
 struct private_data {
+    SDI_HANDLE SdiHandle;
     char password[MAX_PASSWD_LEN + 1];
     int state;
 };
 
 /*
- * Default tacacs login authentication function. Wants a username
- * and a password, and tries to verify them.
+ * Use aceclnt to verify a supplied password using state set up earlier
+ * when the username was supplied.
+ */
+static int
+aceclnt_verify(char *name, char *passwd, struct authen_data *data)
+{
+    struct private_data *p = data->method_data;
+    SDI_HANDLE SdiHandle = p->SdiHandle;
+    int acmRet;
+
+    data->status = TAC_PLUS_AUTHEN_STATUS_FAIL;
+
+    /*
+    if (aceclntverify(aceclntp, passwd) == 0) {
+	*//* S/Key authentication succeeded *//*
+	data->status = TAC_PLUS_AUTHEN_STATUS_PASS;
+	if (aceclntp->n < 5) {
+	    data->server_msg = tac_strdup("Password will expire soon");
+	    return(1);
+	}
+    } */
+    acmRet = SD_Check(SdiHandle, passwd, name);
+    if (acmRet == ACM_OK)
+	    data->status = TAC_PLUS_AUTHEN_STATUS_PASS;
+    return(0);
+}
+
+/*
+ * aceclnt tacacs login authentication function. Wants a username
+ * and a password, and tries to verify them via aceclnt.
  *
  * Choose_authen will ensure that we already have a username before this
  * gets called.
@@ -47,16 +78,22 @@ struct private_data {
  * Return 0 if data->status is valid, otherwise 1
  */
 int
-default_v0_fn(struct authen_data *data)
+aceclnt_fn(struct authen_data *data)
 {
+#define ACEBUFSZ	256
+    char buf[ACEBUFSZ];
     char *name, *passwd;
     struct private_data *p;
     char *prompt;
+    int pwlen, acmRet;
 
-    p = (struct private_data *) data->method_data;
+    p = (struct private_data *)data->method_data;
 
     /* An abort has been received. Clean up and return */
     if (data->flags & TAC_PLUS_CONTINUE_FLAG_ABORT) {
+	if (p->SdiHandle) {
+		SD_Close(p->SdiHandle);
+	}
 	if (data->method_data)
 	    free(data->method_data);
 	data->method_data = NULL;
@@ -64,13 +101,24 @@ default_v0_fn(struct authen_data *data)
     }
     /* Initialise method_data if first time through */
     if (!p) {
-	p = (struct private_data *) tac_malloc(sizeof(struct private_data));
+	p = (struct private_data *)tac_malloc(sizeof(struct private_data));
 	memset(p, 0, sizeof(struct private_data));
 	data->method_data = p;
 	p->state = STATE_AUTHEN_START;
+
+	p->SdiHandle = SDI_HANDLE_NONE;
+	acmRet = SD_Init(&(p->SdiHandle));
+	if (acmRet != ACM_OK) {
+		report(LOG_ERR, "%s: aceclnt_fn unable to contact ACE %d",
+		       session.peer, p->state);
+		if (p->SdiHandle) {
+			SD_Close(p->SdiHandle);
+		}
+		return(1);
+	}
     }
 
-    /* Unless we're enabling, we need a username */
+    /* Unless we are enabling, we need a username */
     if (data->service != TAC_PLUS_AUTHEN_SVC_ENABLE &&
 	(char)data->NAS_id->username[0] == '\0') {
 	switch (p->state) {
@@ -87,14 +135,7 @@ default_v0_fn(struct authen_data *data)
 	    /* No username. Try requesting one */
 	    data->status = TAC_PLUS_AUTHEN_STATUS_GETUSER;
 	    if (data->service == TAC_PLUS_AUTHEN_SVC_LOGIN) {
-		prompt = cfg_get_host_prompt(data->NAS_id->NAS_ip);
-		if (prompt == NULL &&
-			!STREQ(data->NAS_id->NAS_name, data->NAS_id->NAS_ip)) {
-		    prompt = cfg_get_host_prompt(data->NAS_id->NAS_name);
-		}
-		if (prompt == NULL) {
-		    prompt = "\nUser Access Verification\n\nUsername: ";
-		}
+		prompt = "\nUser Access Verification\n\nUsername: ";
 	    } else {
 		prompt = "Username: ";
 	    }
@@ -104,8 +145,9 @@ default_v0_fn(struct authen_data *data)
 
 	default:
 	    /* something awful has happened. Give up and die */
-	    report(LOG_ERR, "%s: default_fn bad state %d",
+	    report(LOG_ERR, "%s: aceclnt_fn bad state %d",
 		   session.peer, p->state);
+	    SD_Close(p->SdiHandle);
 	    return(1);
 	}
     }
@@ -115,22 +157,44 @@ default_v0_fn(struct authen_data *data)
 
     /* Do we have a password? */
     passwd = p->password;
-
-    if (!passwd[0]) {
-	/*
-	 * no password yet. Either we need to ask for one and expect to get
+    if (passwd[0] == '\0') {
+	/* no password yet. Either we need to ask for one and expect to get
 	 * called again, or we asked but nothing came back, which is fatal
 	 */
 	switch (p->state) {
 	case STATE_AUTHEN_GETPASS:
 	    /* We already asked for a password. This should be the reply */
-	    strncpy(passwd, data->client_msg, MAX_PASSWD_LEN);
-	    passwd[MAX_PASSWD_LEN + 1] = '\0';
+	    if (data->client_msg) {
+		pwlen = MIN(strlen(data->client_msg), MAX_PASSWD_LEN);
+	    } else {
+		pwlen = 0;
+	    }
+	    strncpy(passwd, data->client_msg, pwlen);
+	    passwd[pwlen] = '\0';
 	    break;
 
 	default:
-	    data->flags = TAC_PLUS_AUTHEN_FLAG_NOECHO;
-	    data->server_msg = tac_strdup("Password: ");
+	    /* Request a password */
+	    passwd = cfg_get_login_secret(name, TAC_PLUS_RECURSE);
+	    if (!passwd && !STREQ(passwd, "aceclnt")) {
+		report(LOG_ERR, "Cannot find aceclnt password declaration for"
+		       " %s", name);
+		data->status = TAC_PLUS_AUTHEN_STATUS_ERROR;
+		SD_Close(p->SdiHandle);
+		return(1);
+	    }
+
+	    /* lock the ACE User */
+	    acmRet = SD_Lock(p->SdiHandle, name);
+	    if (acmRet != ACM_OK) {
+		    report(LOG_ERR, "ACE Server name lock failed for %s", name);
+		    data->status = TAC_PLUS_AUTHEN_STATUS_ERROR;
+		    SD_Close(p->SdiHandle);
+		    return(1);
+	    }
+
+	    snprintf(buf, ACEBUFSZ, "Enter PASSCODE: ");
+	    data->server_msg = tac_strdup(buf);
 	    data->status = TAC_PLUS_AUTHEN_STATUS_GETPASS;
 	    p->state = STATE_AUTHEN_GETPASS;
 	    return(0);
@@ -138,43 +202,32 @@ default_v0_fn(struct authen_data *data)
     }
 
     /* We have a username and password. Try validating */
-    if (STREQ(name, DEFAULT_USERNAME)) {
-	/* Never authenticate this user. It's for authorization only */
-	data->status = TAC_PLUS_AUTHEN_STATUS_FAIL;
-	if (debug) {
-	    report(LOG_DEBUG,
-		   "authentication query for '%s' %s from %s rejected",
-		   name && name[0] ? name : "unknown",
-		   session.port, session.peer);
-	}
-	return(0);
-    }
 
     /* Assume the worst */
     data->status = TAC_PLUS_AUTHEN_STATUS_FAIL;
 
     switch (data->service) {
-    case TAC_PLUS_AUTHEN_SVC_NASI:
     case TAC_PLUS_AUTHEN_SVC_LOGIN:
-    case TAC_PLUS_AUTHEN_SVC_PPP:
-	verify(name, passwd, data, TAC_PLUS_RECURSE);
+    case TAC_PLUS_AUTHEN_SVC_ENABLE:
+	aceclnt_verify(name, passwd, data);
 	if (debug)
-	    report(LOG_INFO, "login query for '%s' %s from %s %s",
+	    report(LOG_INFO, "login/enable query for '%s' %s from %s %s",
 		   name && name[0] ? name : "unknown",
 		   data->NAS_id->NAS_port && data->NAS_id->NAS_port[0] ?
-		       data->NAS_id->NAS_port : "unknown",
+		   data->NAS_id->NAS_port : "unknown",
 		   session.peer,
 		   (data->status == TAC_PLUS_AUTHEN_STATUS_PASS) ?
 		   "accepted" : "rejected");
 	break;
-
     default:
 	data->status = TAC_PLUS_AUTHEN_STATUS_ERROR;
 	report(LOG_ERR, "%s: Bogus service value %d from packet",
-	       session.peer, data->service);
+					       session.peer, data->service);
 	break;
     }
 
+    if (p->SdiHandle)
+	    SD_Close(p->SdiHandle);
     if (data->method_data)
 	free(data->method_data);
     data->method_data = NULL;
@@ -185,7 +238,7 @@ default_v0_fn(struct authen_data *data)
     case TAC_PLUS_AUTHEN_STATUS_PASS:
 	return(0);
     default:
-	report(LOG_ERR, "%s: default_v0_fn can't set status %d",
+	report(LOG_ERR, "%s: aceclnt_fn couldn't set recognizable status %d",
 	       session.peer, data->status);
 	data->status = TAC_PLUS_AUTHEN_STATUS_ERROR;
 	return(1);
