@@ -482,10 +482,11 @@ void	set_expiration_status(char *, struct authen_data *);
 int	verify(char *, char *, struct authen_data *, int);
 int	verify_pwd(char *, char *, struct authen_data *, char *);
 
+int aceclnt_fn(struct authen_data *data);
+int default_v0_fn(struct authen_data *data);
+int enable_fn(struct authen_data *data);
 int sendauth_fn(struct authen_data *data);
 int sendpass_fn(struct authen_data *data);
-int enable_fn(struct authen_data *data);
-int default_v0_fn(struct authen_data *data);
 int skey_fn(struct authen_data *data);
 
 /* tac_plus.c */
